Added direction to wiki

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Starter project for Introduction to Logic
 
+Start here: https://github.com/frenchy64/Logic-Starter/wiki
+
 Special Thanks to:
 David Nolen
 
